qt/gen_qfiledialog.nim

proc fcQFileDialog_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_enterEvent".}
proc fQFileDialog_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_leaveEvent".}
proc fcQFileDialog_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_leaveEvent".}
proc fQFileDialog_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_paintEvent".}
proc fcQFileDialog_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_paintEvent".}
proc fQFileDialog_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_moveEvent".}
proc fcQFileDialog_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_moveEvent".}
proc fQFileDialog_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_tabletEvent".}
proc fcQFileDialog_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_tabletEvent".}
proc fQFileDialog_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_actionEvent".}
proc fcQFileDialog_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_actionEvent".}
proc fQFileDialog_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_dragEnterEvent".}
proc fcQFileDialog_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_dragEnterEvent".}
proc fQFileDialog_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_dragMoveEvent".}
proc fcQFileDialog_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_dragMoveEvent".}
proc fQFileDialog_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_dragLeaveEvent".}
proc fcQFileDialog_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_dragLeaveEvent".}
proc fQFileDialog_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_dropEvent".}
proc fcQFileDialog_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_dropEvent".}
proc fQFileDialog_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_hideEvent".}
proc fcQFileDialog_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_hideEvent".}
proc fQFileDialog_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QFileDialog_virtualbase_nativeEvent".}
proc fcQFileDialog_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_nativeEvent".}
proc fQFileDialog_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QFileDialog_virtualbase_metric".}
proc fcQFileDialog_override_virtual_metric(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_metric".}
proc fQFileDialog_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QFileDialog_virtualbase_initPainter".}
proc fcQFileDialog_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_initPainter".}
proc fQFileDialog_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QFileDialog_virtualbase_redirected".}
proc fcQFileDialog_override_virtual_redirected(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_redirected".}
proc fQFileDialog_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QFileDialog_virtualbase_sharedPainter".}
proc fcQFileDialog_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_sharedPainter".}
proc fQFileDialog_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QFileDialog_virtualbase_inputMethodEvent".}
proc fcQFileDialog_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_inputMethodEvent".}
proc fQFileDialog_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QFileDialog_virtualbase_inputMethodQuery".}
proc fcQFileDialog_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_inputMethodQuery".}
proc fQFileDialog_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QFileDialog_virtualbase_focusNextPrevChild".}
proc fcQFileDialog_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_focusNextPrevChild".}
proc fQFileDialog_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_timerEvent".}
proc fcQFileDialog_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_timerEvent".}
proc fQFileDialog_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_childEvent".}
proc fcQFileDialog_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_childEvent".}
proc fQFileDialog_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_customEvent".}
proc fcQFileDialog_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_customEvent".}
proc fQFileDialog_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QFileDialog_virtualbase_connectNotify".}
proc fcQFileDialog_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_connectNotify".}
proc fQFileDialog_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QFileDialog_virtualbase_disconnectNotify".}
proc fcQFileDialog_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_disconnectNotify".}
proc fcQFileDialog_delete(self: pointer) {.importc: "QFileDialog_delete".}


func init*(T: type QFileDialog, h: ptr cQFileDialog): QFileDialog =
  T(h: h)
proc create*(T: type QFileDialog, parent: gen_qwidget.QWidget): QFileDialog =

  QFileDialog.init(fcQFileDialog_new(parent.h))
proc create*(T: type QFileDialog, parent: gen_qwidget.QWidget, f: gen_qnamespace.WindowType): QFileDialog =

  QFileDialog.init(fcQFileDialog_new2(parent.h, cint(f)))
proc create*(T: type QFileDialog, ): QFileDialog =

  QFileDialog.init(fcQFileDialog_new3())
proc create*(T: type QFileDialog, parent: gen_qwidget.QWidget, caption: string): QFileDialog =

  QFileDialog.init(fcQFileDialog_new4(parent.h, struct_miqt_string(data: caption, len: csize_t(len(caption)))))
proc create*(T: type QFileDialog, parent: gen_qwidget.QWidget, caption: string, directory: string): QFileDialog =

  QFileDialog.init(fcQFileDialog_new5(parent.h, struct_miqt_string(data: caption, len: csize_t(len(caption))), struct_miqt_string(data: directory, len: csize_t(len(directory)))))
proc create*(T: type QFileDialog, parent: gen_qwidget.QWidget, caption: string, directory: string, filter: string): QFileDialog =

  QFileDialog.init(fcQFileDialog_new6(parent.h, struct_miqt_string(data: caption, len: csize_t(len(caption))), struct_miqt_string(data: directory, len: csize_t(len(directory))), struct_miqt_string(data: filter, len: csize_t(len(filter)))))
proc metaObject*(self: QFileDialog, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQFileDialog_metaObject(self.h))

proc metacast*(self: QFileDialog, param1: cstring): pointer =

  fcQFileDialog_metacast(self.h, param1)

proc metacall*(self: QFileDialog, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQFileDialog_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QFileDialog, s: cstring): string =

  let v_ms = fcQFileDialog_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QFileDialog, s: cstring): string =

  let v_ms = fcQFileDialog_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setDirectory*(self: QFileDialog, directory: string): void =

  fcQFileDialog_setDirectory(self.h, struct_miqt_string(data: directory, len: csize_t(len(directory))))

proc setDirectoryWithDirectory*(self: QFileDialog, directory: gen_qdir.QDir): void =

  fcQFileDialog_setDirectoryWithDirectory(self.h, directory.h)

proc directory*(self: QFileDialog, ): gen_qdir.QDir =

  gen_qdir.QDir(h: fcQFileDialog_directory(self.h))

proc setDirectoryUrl*(self: QFileDialog, directory: gen_qurl.QUrl): void =

  fcQFileDialog_setDirectoryUrl(self.h, directory.h)

proc directoryUrl*(self: QFileDialog, ): gen_qurl.QUrl =

  gen_qurl.QUrl(h: fcQFileDialog_directoryUrl(self.h))

proc selectFile*(self: QFileDialog, filename: string): void =

  fcQFileDialog_selectFile(self.h, struct_miqt_string(data: filename, len: csize_t(len(filename))))

proc selectedFiles*(self: QFileDialog, ): seq[string] =

  var v_ma = fcQFileDialog_selectedFiles(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc selectUrl*(self: QFileDialog, url: gen_qurl.QUrl): void =

  fcQFileDialog_selectUrl(self.h, url.h)

proc selectedUrls*(self: QFileDialog, ): seq[gen_qurl.QUrl] =

  var v_ma = fcQFileDialog_selectedUrls(self.h)
  var vx_ret = newSeq[gen_qurl.QUrl](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qurl.QUrl(h: v_outCast[i])
  vx_ret

proc setNameFilterDetailsVisible*(self: QFileDialog, enabled: bool): void =

  fcQFileDialog_setNameFilterDetailsVisible(self.h, enabled)

proc isNameFilterDetailsVisible*(self: QFileDialog, ): bool =

  fcQFileDialog_isNameFilterDetailsVisible(self.h)

proc setNameFilter*(self: QFileDialog, filter: string): void =

  fcQFileDialog_setNameFilter(self.h, struct_miqt_string(data: filter, len: csize_t(len(filter))))

proc setNameFilters*(self: QFileDialog, filters: seq[string]): void =

  var filters_CArray = newSeq[struct_miqt_string](len(filters))
  for i in 0..<len(filters):
    filters_CArray[i] = struct_miqt_string(data: filters[i], len: csize_t(len(filters[i])))

  fcQFileDialog_setNameFilters(self.h, struct_miqt_array(len: csize_t(len(filters)), data: if len(filters) == 0: nil else: addr(filters_CArray[0])))

proc nameFilters*(self: QFileDialog, ): seq[string] =

  var v_ma = fcQFileDialog_nameFilters(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc selectNameFilter*(self: QFileDialog, filter: string): void =

  fcQFileDialog_selectNameFilter(self.h, struct_miqt_string(data: filter, len: csize_t(len(filter))))

proc selectedMimeTypeFilter*(self: QFileDialog, ): string =

  let v_ms = fcQFileDialog_selectedMimeTypeFilter(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc selectedNameFilter*(self: QFileDialog, ): string =
